[package]
name = "onedrive-fuse"
version = "0.2.6"
edition = "2021"
repository = "https://github.com/oxalica/onedrive-fuse"
keywords = ["onedrive", "fuse"]
description = "Mount OneDrive storage as FUSE filesystem"
readme = "README.md"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0.28"
async-trait = "0.1.68"
bytes = "1.0.1"
clap = { version = "4.0.32", features = ["derive"] }
config = { version = "0.13", default-features = false, features = ["toml"] }
dirs = "5.0.0"
env_logger = "0.10.0"
fuser = { version = "0.12.0", features = ["abi-7-31"] }
http = "0.2.1"
humantime = "2.0.1"
indexmap = "1.6.2"
libc = "0.2.69"
log = "0.4.8"
lru-cache = "0.1.2"
nix = "0.26.1"
onedrive-api = "0.9.0"
open = "4.0.1"
reqwest = "0.11.0"
rusqlite = "0.29.0"
sd-notify = "0.4.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
sharded-slab = "0.1.0"
static_assertions = "1.1.0"
tempfile = "3.1.0"
thiserror = "1.0.16"
tiny_http = "0.12.0"
tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
url = "2.3.1"
